# XRedis

./: CMakeLists.txt  README.md
hiredis-0.13/: hiredis.sln  hiredis.vcxproj
src/: Main.cpp  RedisConn.cpp  RedisConn.h  RedisReply.cpp  RedisReply.h
